# brain-visualizer

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
app/: Cargo.toml  cf-build.sh  local_dev.sh  run.sh
app/crates/brain-visualizer/: Cargo.toml
app/crates/brain-visualizer/examples/: cpu_check.rs  morph_view.rs  near_lod_check.rs  render_check.rs  sim_check.rs  soc_sweep.rs  time_network_payload.rs
app/crates/brain-visualizer/src/: buffers.rs  gpu_limits.rs  lib.rs  profiler.rs
app/crates/brain-visualizer/src/connectivity/: hash.rs  mod.rs  spatial.rs
app/crates/brain-visualizer/src/manifold/: gyrify.rs  mod.rs  regions.rs
app/crates/brain-visualizer/src/sim/: backend.rs  mod.rs  morphology.rs  scaler.rs
app/crates/brain-visualizer/src/sim/cpu/: core.rs  mod.rs
app/crates/brain-visualizer/src/sim/gpu/: mod.rs  pipelines.rs  resources.rs
app/crates/brain-visualizer/src/sim/gpu/shaders/: bloom.wgsl  compact_morph_segments.wgsl  emit_edges.wgsl  frustum_cull.wgsl  hash.wgsl  integrate.wgsl  metrics.wgsl  render_cylinder.wgsl  render_far.wgsl  render_manifold.wgsl  render_morphology.wgsl  render_ribbon.wgsl  render_sphere.wgsl  scatter.wgsl  stimulate.wgsl  write_scatter_dispatch.wgsl
app/crates/brain-visualizer/tests/: arrival_fade_factor.rs  dendrite_branching_near_soma.rs  gpu_current_overflow.rs  gpu_sim_dynamics.rs  stimulate_grid_contract.rs  wgsl_hash_determinism.rs  wgsl_target_determinism.rs  wgsl_tick_wrap.rs  wgsl_weight_determinism.rs
app/crates/brain-visualizer/tests/common/: mod.rs
app/web/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
app/web/e2e/: boot_overlay.spec.ts  brain_visualizer.spec.ts  real_hardware_smoke.spec.ts  rebuild_responsiveness.spec.ts  smoke-artifact.ts  tsconfig.json  ux_audit_remediation.spec.ts
app/web/public/: _headers  coi-serviceworker.js
app/web/src/: boot-failure.test.ts  boot-failure.ts  boot-overlay.test.ts  boot-overlay.ts  boot-sequencer-label-contract.test.ts  boot-sequencer.test.ts  boot-sequencer.ts  boot-timings.test.ts  boot-timings.ts  main.ts
app/web/src/core/: mobile-config.test.ts  mobile-config.ts  morph-config.ts  persistence-normalization.test.ts  setting-metadata.ts  settings-contract.test.ts  settings.ts  types.ts
app/web/src/cpu/: cpu-renderer.ts  cpu-worker.ts
app/web/src/gpu-build/: network-build-client.test.ts  network-build-client.ts  network-build-worker.ts  prepared-network.test.ts  prepared-network.ts
app/web/src/observability/: telemetry.test.ts  telemetry.ts
app/web/src/rebuild/: rebuild-coordinator.test.ts  rebuild-coordinator.ts  rebuild-intent.test.ts  rebuild-intent.ts
app/web/src/render/: camera.test.ts  camera.ts  profiler.ts  renderer.ts
app/web/src/ui/: brain-color-mode.test.ts  connection-layer.test.ts  controls.css  controls.test.ts  controls.ts  dev-panel-morphology-batching.test.ts  dev-panel-tiers.test.ts  dev-panel.css  dev-panel.test.ts  dev-panel.ts  estimated-metric-labels.test.ts  hud.ts
bench/: Cargo.toml
bench/src/: main.rs
bench/web/: Cargo.toml  index.html
bench/web/src/: lib.rs
docs/: architecture.md  current_plan.md  decisions.md  denied_ideas.md  index.md  orchestration-log.md  overview.md  ownership.md  possible_future_work.md  repository-layout.md
docs/_meta/: manifest.md  ownership.json
docs/agent-context/: coding-style.md  dev-loop.md  index.md  maintaining-docs.md  orchestrating.md  repo-rules.md  testing-how-to.md
docs/architecture/: active-edges.md  build-and-deploy.md  connectivity.md  cpu-backend.md  data-model.md  dev-panel.md  gpu-backend.md  gpu-rendering.md  index.md  manifold.md  profiling.md  scaling.md  simulation.md  web-frontend.md
docs/decisions/: backends.md  connectivity.md  data-layout.md  dev-tooling.md  dynamics.md  index.md  interaction.md  manifold.md  profiling.md  rendering.md  scaling.md  scope.md
docs/phases/: phase-0-benchmark.md  phase-1-foundation.md  phase-2-gpu-sim.md  phase-3-gpu-render.md  phase-4-near-lod.md  phase-5-controls.md  phase-6-cpu-backend.md  phase-7-polish.md
docs/plans/: 00-roadmap-index.md  accepted-visual-defaults-manifest.md  active-morphology-solid-opacity.md  active-opacity-continuous-model.md  active-opacity-controls-and-solid-firing.md  active-opacity-render-pass.md  audio-removal.md  axon-trunk-and-root-like-branches.md  brain-color-mode.md  brain-shape-realism.md  brain-shell-realism.md  connections-lighting-tooltips.md  defaults-and-scale-limits.md  dendrite-branching-near-soma.md  dendrite-geometry-fix.md  dendrites-real-incoming-synapses.md  dev-panel-and-settings-overhaul.md  dev-panel-simplify-and-rebuild-fix.md  doc-editorial-cleanup.md  future_roadmap.md  heavy-tailed-synapse-reach.md  implementation-review-briefs.md  index.md  morphology-branching-tree.md  morphology-process-root-contract.md  morphology-visual-refresh-hub.md  morphology-wave-hub.md  organic-morphology-geometry.md  organic-soma-redesign.md  patch-0.1.1-remove-autoscaling-persist-config.md  procedural-cell-rework-0.2.0-axon-arbor.md  procedural-cell-rework-0.2.1-dendrite-tuning.md  procedural-cell-rework-orchestration.md  procedural-cell-rework.md  settings-ia-and-dead-controls.md  until-arrival-default-and-fade.md  ux-audit-remediation.md  v0.3.0-brain-shaped-arena.md  v0.3.1-curved-chain-morphsegments.md  v0.3.2-neuron-material-texture-pass.md  (+7 more)
docs/plans/orchestrator/: app-overhaul-hub-2026-06-12.md  boot-load-panel-overhaul-2026-06-12.md  (+9 more)
examples/: cpu_check.rs  near_lod_check.rs  render_check.rs  sim_check.rs  soc_sweep.rs
src/: buffers.rs  gpu_limits.rs  lib.rs
src/connectivity/: hash.rs  mod.rs  spatial.rs
src/manifold/: icosphere.rs  mod.rs  regions.rs
src/sim/: backend.rs  mod.rs  scaler.rs
tests/: wgsl_hash_determinism.rs  wgsl_target_determinism.rs
web/: camera.ts  controls.css  controls.ts  cpu-renderer.ts  cpu-worker.ts  main.ts  profiler.ts  renderer.ts  sonification.ts  types.ts
(+12 files in other folders)
