[package]
name = "brain-visualizer"
version = "0.1.0"
edition = "2021"
description = "Hardware-adaptive spiking-neural-network cortical visualizer"

# Exclude the throwaway bench crate from this (implicit) workspace so it keeps
# its own Cargo.lock / dependency set and is never built as part of the app.
[workspace]
members = ["."]
exclude = ["bench"]

[lib]
# cdylib for the wasm bundle, rlib so the pure logic is unit-testable on host.
crate-type = ["cdylib", "rlib"]

[features]
# CPU backend threading (BV24). Off by default. On the host (native harness /
# `cargo run --example cpu_check --features cpu-threads`) this enables `rayon`
# directly. On wasm the threaded pool is `wasm-bindgen-rayon`, which additionally
# requires a **nightly** toolchain + `-C target-feature=+atomics,+bulk-memory` +
# a `build-std` rebuild of `std` — see README "Threaded WASM build". The default
# (non-threaded) wasm build stays clean on stable without this feature.
cpu-threads = ["dep:rayon", "wasm-bindgen-rayon"]

[dependencies]
# Cross-platform: build & test on host (x86_64) and on wasm32.
wgpu = { version = "29", features = ["wgsl"] }
noise = "0.9"
bytemuck = { version = "1", features = ["derive"] }
# CPU-backend parallelism. Optional + opt-in via `cpu-threads`. Cross-platform:
# host uses native rayon directly; wasm uses it through wasm-bindgen-rayon's
# pool. Not pulled into the default (stable) build.
rayon = { version = "1", optional = true }

# wasm-only glue. Gated so `cargo build`/`cargo test` on the host never pull
# these in (they require the wasm32 target / a browser).
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.122"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
# Threaded wasm pool, opt-in via the `cpu-threads` feature (phase 6).
wasm-bindgen-rayon = { version = "1.3", optional = true }
web-sys = { version = "0.3", features = [
    "Window",
    "Performance",
    "console",
    "Worker",
    "Navigator",
    "Document",
    "HtmlCanvasElement",
] }

[dev-dependencies]
# Native executor used by the WGSL-vs-Rust determinism integration test.
pollster = "0.4"

[profile.release]
opt-level = 3
