[package]
name = "brain-visualizer"
version = "0.3.0"
edition = "2021"
description = "Hardware-adaptive spiking-neural-network cortical visualizer"

[lib]
# cdylib for the wasm bundle, rlib so the pure logic is unit-testable on host.
crate-type = ["cdylib", "rlib"]

[dependencies]
# Cross-platform: build & test on host (x86_64) and on wasm32.
wgpu = { version = "29", features = ["wgsl"] }
noise = "0.9"
bytemuck = { version = "1", features = ["derive"] }
# Morphology config JSON round-trip (v0.3.1). wasm32-friendly: serde derive only
# (no std-specific features), serde_json with the `alloc` feature so it builds on
# the no-default-features wasm target. Used by the `set_morphology_config` WASM
# entry point and the morph_view artifact snapshot.
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
# wasm-only glue. Gated so `cargo build`/`cargo test` on the host never pull
# these in (they require the wasm32 target / a browser).
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.122"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "Window",
    "Performance",
    "console",
    "Worker",
    "Navigator",
    "Document",
    "HtmlCanvasElement",
] }

[dev-dependencies]
# Native executor used by the WGSL-vs-Rust determinism integration test.
pollster = "0.4"
